[package]
name = "capsula-mesh-protocol"
version = "0.2.0"
edition = "2021"
description = "Cryptographically secure, binary-first transport protocol for distributed data meshes"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
